# leads

./: .agentrules  .gitignore  PROJECT_CONTEXT.md  README.md  config.json  enrichment_scraper.py  facebook_search_scraper.py  langgraph.json  leads.db  main.py  pyproject.toml  pytest.ini  scraper.py  start_dev.sh  test_suite.py  testing_strategy.md
data/: bastion_bot.db
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: LocationCascader.tsx
frontend/src/lib/: api.ts  store.ts
leads/: 10 comercializadoras_Alfredo.xlsx  Carpinterias.xlsx  Fumigaciones.xlsx  Manufactureras.xlsx
src/agents/: agent.py  main.py  telegram_interface.py
src/application/ai_agents/: agent.py  agent_service.py
src/application/batch_jobs/: scheduler_service.py  scraper_worker.py
src/core/: config.py  logging_config.py  security.py  tools_registry.py
src/domain/: models.py
src/infrastructure/audio/: audio_service.py
src/infrastructure/database/: storage_service.py
src/infrastructure/messaging/: whatsapp_service.py
src/interfaces/: telegram_bot.py
src/presentation/api/: admin.py  (+7 more)
src/scrapers/: facebook_search_scraper.py  scraper.py
src/services/: agent_service.py  scheduler_service.py  storage_service.py
tests/core/: test_tools_registry.py
tests/domain/: test_models.py
tests/fixtures/: dummy_map.html
tests/frontend/: jest.config.js
tests/infrastructure/: test_logs_buffering.py  test_network_config.py  test_network_dual_check.py  test_storage_normalization.py  test_storage_service.py
(+39 files in other folders)
